--- a/templates/add_payment.html
+++ b/templates/add_payment.html
@@ -38,7 +38,9 @@
             </div>
             
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                <a href="{{ url_for('view_payments') }}" class="btn btn-secondary me-md-2">Cancel</a>
+                <a href="{{ url_for('view_payments') }}" class="btn btn-secondary me-md-2">
+                    <i class="bi bi-x-circle"></i> Cancel
+                </a>
                 <button type="submit" class="btn btn-primary">
                     <i class="bi bi-cash-coin"></i> Add Payment
                 </button>
